Bug 69692 - [BYT]igt/sysfs_rc6_residency fails
Summary: [BYT]igt/sysfs_rc6_residency fails
Status: CLOSED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/Intel (show other bugs)
Version: unspecified
Hardware: All Linux (All)
: medium normal
Assignee: Intel GFX Bugs mailing list
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-09-23 06:26 UTC by lu hua
Modified: 2017-10-06 14:42 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments

Description lu hua 2013-09-23 06:26:15 UTC
System Environment:
--------------------------
Platform:  Baytrail
Kernel: (drm-intel-nightly)565d170f33cc46ec4b33911c9302a506fe72fd60

Bug detailed description:
-----------------------------
It fails on Baytrail with -nightly kernel.

output:
Diff was too high. That is unpossible

dmesg:
[  114.158881] [drm:i915_driver_open],
[  114.158913] [drm:intel_crtc_cursor_set], cursor off
[  114.158918] [drm:intel_crtc_set_config], [CRTC:3] [FB:26] #connectors=1 (x y) (0 0)
[  114.158926] [drm:intel_set_config_compute_mode_changes], computed changes for [CRTC:3], mode_changed=0, fb_changed=0
[  114.158931] [drm:intel_modeset_stage_output_state], [CONNECTOR:16:eDP-1] to [CRTC:3]
[  114.158936] [drm:intel_crtc_cursor_set], cursor off
[  114.158939] [drm:intel_crtc_set_config], [CRTC:6] [NOFB]
[  114.158943] [drm:intel_set_config_compute_mode_changes], computed changes for [CRTC:6], mode_changed=0, fb_changed=0
[  114.158947] [drm:intel_modeset_stage_output_state], [CONNECTOR:16:eDP-1] to [CRTC:3]
[  114.158968] [drm:i915_driver_open],
[  114.158980] [drm:intel_crtc_cursor_set], cursor off
[  114.158984] [drm:intel_crtc_set_config], [CRTC:3] [FB:26] #connectors=1 (x y) (0 0)
[  114.158989] [drm:intel_set_config_compute_mode_changes], computed changes for [CRTC:3], mode_changed=0, fb_changed=0
[  114.158993] [drm:intel_modeset_stage_output_state], [CONNECTOR:16:eDP-1] to [CRTC:3]
[  114.158997] [drm:intel_crtc_cursor_set], cursor off
[  114.159000] [drm:intel_crtc_set_config], [CRTC:6] [NOFB]
[  114.159003] [drm:intel_set_config_compute_mode_changes], computed changes for [CRTC:6], mode_changed=0, fb_changed=0
[  114.159007] [drm:intel_modeset_stage_output_state], [CONNECTOR:16:eDP-1] to [CRTC:3]
[  114.159021] [drm:i915_driver_open],
[  114.159426] [drm:intel_crtc_cursor_set], cursor off
[  114.159431] [drm:intel_crtc_set_config], [CRTC:3] [FB:26] #connectors=1 (x y) (0 0)
[  114.159436] [drm:intel_set_config_compute_mode_changes], computed changes for [CRTC:3], mode_changed=0, fb_changed=0
[  114.159440] [drm:intel_modeset_stage_output_state], [CONNECTOR:16:eDP-1] to [CRTC:3]
[  114.159444] [drm:intel_crtc_cursor_set], cursor off
[  114.159447] [drm:intel_crtc_set_config], [CRTC:6] [NOFB]
[  114.159450] [drm:intel_set_config_compute_mode_changes], computed changes for [CRTC:6], mode_changed=0, fb_changed=0
[  114.159454] [drm:intel_modeset_stage_output_state], [CONNECTOR:16:eDP-1] to [CRTC:3]
[  119.159656] [drm:intel_enable_rc6], RC6 and deep RC6 enabled
[  119.159729] [drm:intel_enable_rc6], RC6 and deep RC6 enabled
[  119.159773] [drm:intel_enable_rc6], RC6 and deep RC6 enabled
[  119.159814] [drm:intel_enable_rc6], RC6 and deep RC6 enabled
[  122.160195] [drm:intel_enable_rc6], RC6 and deep RC6 enabled
[  122.160246] [drm:intel_enable_rc6], RC6 and deep RC6 enabled
[  122.160288] [drm:intel_enable_rc6], RC6 and deep RC6 enabled
[  122.160405] [drm:i915_driver_open],
[  122.160426] [drm:intel_crtc_cursor_set], cursor off
[  122.160431] [drm:intel_crtc_set_config], [CRTC:3] [FB:26] #connectors=1 (x y) (0 0)
[  122.160438] [drm:intel_set_config_compute_mode_changes], computed changes for [CRTC:3], mode_changed=0, fb_changed=0
[  122.160443] [drm:intel_modeset_stage_output_state], [CONNECTOR:16:eDP-1] to [CRTC:3]
[  122.160448] [drm:intel_crtc_cursor_set], cursor off
[  122.160451] [drm:intel_crtc_set_config], [CRTC:6] [NOFB]
[  122.160454] [drm:intel_set_config_compute_mode_changes], computed changes for [CRTC:6], mode_changed=0, fb_changed=0
[  122.160458] [drm:intel_modeset_stage_output_state], [CONNECTOR:16:eDP-1] to [CRTC:3]
[  122.160472] [drm:i915_driver_open],
[  122.161609] [drm:intel_crtc_cursor_set], cursor off
[  122.161614] [drm:intel_crtc_set_config], [CRTC:3] [FB:26] #connectors=1 (x y) (0 0)
[  122.161620] [drm:intel_set_config_compute_mode_changes], computed changes for [CRTC:3], mode_changed=0, fb_changed=0
[  122.161624] [drm:intel_modeset_stage_output_state], [CONNECTOR:16:eDP-1] to [CRTC:3]
[  122.161628] [drm:intel_crtc_cursor_set], cursor off
[  122.161631] [drm:intel_crtc_set_config], [CRTC:6] [NOFB]
[  122.161634] [drm:intel_set_config_compute_mode_changes], computed changes for [CRTC:6], mode_changed=0, fb_changed=0
[  122.161638] [drm:intel_modeset_stage_output_state], [CONNECTOR:16:eDP-1] to [CRTC:3]

Reproduce steps:
----------------------------
1. ./sysfs_rc6_residency
Comment 1 Jesse Barnes 2013-09-26 19:36:54 UTC
Can you try these?

http://lists.freedesktop.org/archives/intel-gfx/2013-September/033966.html
Comment 2 Jesse Barnes 2013-09-27 19:44:39 UTC
Fixes merged.

commit 65e970de91dc068a52a7771b1568577dc2ef4010
Author: Jesse Barnes <jbarnes@virtuousgeek.org>
Date:   Thu Sep 26 17:55:58 2013 -0700

    drm/i915/vlv: use correct units for rc6 residency v2
Comment 3 lu hua 2013-09-30 06:04:05 UTC
Verified.Fixed.
Comment 4 Elizabeth 2017-10-06 14:42:56 UTC
Closing old verified.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.